feat: handled deleted folder logic
